# webrtc-research

./: .gitignore  CMakeLists.txt  README  README.md  webrtc_test.sln
aec3/: CMakeLists.txt  adaptive_fir_filter.cc  adaptive_fir_filter.h  aec3_common.cc  aec3_fft.cc  aec3_fft.h  aec_state.cc  aec_state.h  api_call_jitter_metrics.cc  block_delay_buffer.cc  block_framer.cc  block_framer.h  block_processor.cc  block_processor.h  block_processor_metrics.cc  cascaded_biquad_filter.cc  comfort_noise_generator.cc  comfort_noise_generator.h  decimator.cc  decimator.h  echo_audibility.cc  echo_audibility.h  echo_canceller3.cc  echo_canceller3.h  echo_path_delay_estimator.cc  echo_path_delay_estimator.h  echo_remover.cc  echo_remover.h  echo_remover_metrics.cc  echo_remover_metrics.h  erl_estimator.cc  erl_estimator.h  erle_estimator.cc  erle_estimator.h  fft_buffer.h  fft_data.h  filter_analyzer.cc  filter_analyzer.h  frame_blocker.cc  frame_blocker.h  (+46 more)
common_audio/: CMakeLists.txt
common_base/: CMakeLists.txt
common_base/rtc_base/: string_encode.h
nack_module/: Makefile  nack_module.cc  nack_module.vcxproj  nack_module.vcxproj.filters
neteq/: CMakeLists.txt  accelerate.cc  accelerate.h  audio_decoder_unittest.cc  audio_multi_vector.cc  audio_multi_vector.h  audio_multi_vector_unittest.cc  audio_vector.cc  audio_vector_unittest.cc  background_noise.cc  background_noise_unittest.cc  buffer_level_filter.cc  buffer_level_filter_unittest.cc  comfort_noise.cc  comfort_noise_unittest.cc  decision_logic.cc  decision_logic.h  decision_logic_unittest.cc  decoder_database.cc  decoder_database.h  decoder_database_unittest.cc  delay_manager.cc  delay_manager.h  delay_manager_unittest.cc  delay_peak_detector.cc  delay_peak_detector.h  delay_peak_detector_unittest.cc  dsp_helper.h  dsp_helper_unittest.cc  dtmf_buffer.cc  dtmf_buffer_unittest.cc  dtmf_tone_generator.cc  dtmf_tone_generator.h  dtmf_tone_generator_unittest.cc  expand.cc  expand.h  expand_uma_logger.cc  expand_uma_logger.h  expand_unittest.cc  histogram.cc  (+44 more)
neteq/api/: rtp_headers.cc  rtp_headers.h
neteq/api/audio_codecs/: audio_format.cc  audio_format.h  builtin_audio_decoder_factory.cc
neteq/api/audio_codecs/opus/: audio_decoder_opus.cc
neteq/include/: neteq.h
neteq/modules/audio_coding/codecs/opus/: opus_inst.h  opus_interface.c
neteq/rtc_base/: checks.cc  checks.h  logging.cc  logging.h
neteq/rtc_base/strings/: string_builder.h
neteq/rtc_base/synchronization/: yield_policy.cc
neteq_test/: CMakeLists.txt  neteq_test.cpp
rtp_receiver/: Makefile  encode.c  encode.h  h264_rtp_packer.c  h264_rtp_packer.h  rtp_receiver.cc  rtp_receiver.vcxproj  rtp_receiver.vcxproj.filters
